# chisato-bot

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
cogs/configuration/: banners.py  logging.py  rooms.py  settings.py
cogs/configuration/locale/: en_US.json  ru.json  uk.json
cogs/economy/: _error_listener.py  games.py  loves.py  money_give.py  pets.py  simple.py  works.py
cogs/economy/locale/: en_US.json  ru.json  uk.json
cogs/entertainment/: _error_listener.py  cards.py  levels.py  music.py  role_play.py
cogs/entertainment/locale/: en_US.json  ru.json  uk.json
cogs/information/: help_command.py  say.py
cogs/information/locale/: en_US.json  ru.json  uk.json
cogs/management/: analytics.py  database_control.py  global_errors.py  guilds_control.py  management.py  monitoring.py  profile.py  shards_control.py
cogs/management/locale/: en_US.json  ru.json  uk.json
cogs/moderation/: _error_listener.py  ban.py  clear.py  reports.py  roles.py  timeout.py  warns.py
cogs/moderation/locale/: en_US.json  ru.json  uk.json
json/: cards.json  cards_config.json  pets.json  works.json
utils/abstract/: __init__.py  service.py
utils/basic/: __init__.py  chisato.py
utils/basic/helpers/: __init__.py  cog.py  embed.py  int_formats.py  permissions.py
utils/consts/: __init__.py  emoji.py  text.py
utils/dataclasses/: __init__.py  card_item.py  music.py  pet.py  work.py
utils/enviroment/: __init__.py  enviroment.py
utils/exceptions/: errors.py  send_webhooks.py  trace.py
utils/i18n/: __init__.py  localization_store.py
(+147 files in other folders)
